--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,121 @@
-blinker==1.9.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
+acres==0.2.0
+annotated-types==0.7.0
+anyio==4.8.0
+azure-core==1.32.0
+azure-cosmos==4.9.0
+blinker==1.8.2
+build==1.2.2.post1
+CacheControl==0.14.1
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+ci-info==0.3.0
+cleo==2.1.0
+click==8.1.7
 colorama==0.4.6
-Flask==3.1.0
+configobj==5.0.9
+configparser==7.1.0
+crashtest==0.4.1
+DateTime==5.5
+db-dtypes==1.3.1
+distlib==0.3.9
+distro==1.9.0
+dnspython==2.7.0
+dulwich==0.21.7
+etelemetry==0.3.1
+Faker==36.1.1
+fastjsonschema==2.21.1
+filelock==3.16.1
+fitz==0.0.1.dev2
+Flask==3.0.3
+Flask-Cors==5.0.0
+google-api-core==2.24.0
+google-auth==2.37.0
+google-auth-oauthlib==1.2.1
+google-cloud-bigquery==3.27.0
+google-cloud-core==2.4.1
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
+grpcio==1.69.0
+grpcio-status==1.69.0
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
 idna==3.10
+installer==0.7.0
+isodate==0.6.1
 itsdangerous==2.2.0
-Jinja2==3.1.5
-logging==0.4.9.6
+jaraco.classes==3.4.0
+Jinja2==3.1.4
+jiter==0.8.2
+keyring==24.3.1
+looseversion==1.3.0
+lxml==5.3.1
 MarkupSafe==3.0.2
+more-itertools==10.5.0
+msgpack==1.1.0
+networkx==3.4.2
+ngrok==1.4.0
+nibabel==5.3.2
+nipype==1.9.2
+numpy==2.1.3
+oauthlib==3.2.2
+openai==1.61.1
+packaging==24.2
+pandas==2.2.3
+pathlib==1.0.1
+pexpect==4.9.0
+pip-tools==7.4.1
+pkginfo==1.12.0
+platformdirs==4.3.6
+poetry==1.8.4
+poetry-core==1.9.1
+poetry-plugin-export==1.8.0
+proto-plus==1.25.0
+protobuf==5.29.3
+prov==2.0.1
+ptyprocess==0.7.0
+puremagic==1.28
+pyarrow==19.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydot==3.0.4
+pymongo==4.10.1
+PyMuPDF==1.25.3
+pyparsing==3.2.1
+pyproject_hooks==1.2.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+pywin32-ctypes==0.2.3
+pyxnat==1.6.3
+RapidFuzz==3.10.1
+rdflib==6.3.2
+regex==2024.11.6
 requests==2.32.3
-urllib3==2.3.0
-Werkzeug==3.1.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rsa==4.9
+scipy==1.15.1
+setuptools==75.6.0
+shellingham==1.5.4
+simplejson==3.20.1
+six==1.16.0
+sniffio==1.3.1
+stripe==11.5.0
+tiktoken==0.8.0
+tomlkit==0.13.2
+tqdm==4.67.1
+traits==7.0.2
+trove-classifiers==2024.10.21.16
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+virtualenv==20.28.0
+Werkzeug==3.1.1
+wheel==0.45.1
+zope.interface==7.1.1
